# ZMPO-lab5

./: CMakeLists.txt  Inverted_Integer.cpp  Inverted_Integer.h  MyType.cpp  MyType.h  README.md  any_type.cpp  any_type.h  concrete_type.cpp  concrete_type.h  main.cpp  set.cpp  set.h  set2.cpp  set2.h
